--- a/views/default/layouts/frontend.html
+++ b/views/default/layouts/frontend.html
@@ -2,24 +2,25 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="description" content="{if:$description}{$description}{else:}优淘网提供最可靠、最好口碑的数百个品牌的母婴用品, 致力于帮助广大妈咪们安全便捷地选购奶粉、纸尿裤、童鞋童装、辅食、营养品、服饰、孕妇用品等母婴用品。{/if}" />
-	<meta name="keywords" content="{if:$keywords}{$keywords}{else:}优淘网, 母婴, 品牌, 安全购物, 健康, 小屁孩,导购{/if}" />
-	<title>{if:$title}{$title}{else:}优淘(utao.info) - 一个提供优质、健康、安全母婴品牌用品的导购平台{/if}</title>	
-	<link href="css/style.css" rel="stylesheet" type="text/css" />	
-	<link href="css/nivo-slider.css" rel="stylesheet" type="text/css" />
-	<!--[if IE]><link href="css/style-ie.css" rel="stylesheet" type="text/css" /><![endif]-->
-	<script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
-	<script type="text/javascript" src="js/jquery.lazyload.js"></script>
-	<script type="text/javascript" src="js/jquery.paginate.js"></script>
-	<script type="text/javascript" src="js/page.js"></script>
+	<meta name="description" content="{if:$description}{$description}{else:}优加网提供最可靠、最好口碑的数百个品牌的母婴用品, 致力于帮助广大妈咪们安全便捷地选购奶粉、纸尿裤、童鞋童装、辅食、营养品、服饰、孕妇用品等母婴用品。{/if}" />
+	<meta name="keywords" content="{if:$keywords}{$keywords}{else:}优加网, 母婴, 品牌, 安全购物, 健康, 小屁孩,导购{/if}" />
+	<title>{if:$title}{$title}{else:}优加(ujia.info) - 一个提供优质、健康、安全母婴品牌用品的导购平台{/if}</title>	
+	<link href="{webroot:}css/style.css" rel="stylesheet" type="text/css" />	
+	<link href="{webroot:}css/nivo-slider.css" rel="stylesheet" type="text/css" />
+	<!--[if IE]><link href="{webroot:}css/style-ie.css" rel="stylesheet" type="text/css" /><![endif]-->
+	<script type="text/javascript" src="{webroot:}js/jquery-1.7.1.min.js"></script>
+	<script type="text/javascript" src="{webroot:}js/jquery.lazyload.js"></script>
+	<script type="text/javascript" src="{webroot:}js/jquery.paginate.js"></script>
+	<script type="text/javascript" src="{webroot:}js/page.js"></script>
+	
 </head>
 <body>
 
 <div class="header">
 	<div class="container">
-		<h1 style="margin:0;">
+		<h1>
 			<a href="/" title="utao">
-				<img  src="img/logo.png" alt="utao" />
+				<img  src="{webroot:}img/logo.png" alt="utao" />
 			</a>
 		</h1>
 		<div class="z_b_wrap">
@@ -55,7 +56,7 @@
 <div class="footer">
 	<div class="container">
 		<div class="footer">
-			<p>优淘(utao.info) Copyright © 2012-2013</p>
+			<p>优加(ujia.info) Copyright © 2012-2013</p>
 		</div>
 	</div>
 </div><!-- // end #fppter -->
@@ -66,6 +67,7 @@
 <p style="display:none;">
 <script type="text/javascript">
 var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F60d2ec0a4398cdc9ae7bf4aa6dd174d0' type='text/javascript'%3E%3C/script%3E"));
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F07ad8c955c91f9a8c84407febe2d64dc' type='text/javascript'%3E%3C/script%3E"));
 </script>
+<script src="http://l.tbcdn.cn/apps/top/x/sdk.js?appkey=21492038"></script>
 </p>
