--- a/views/default/frontend/index.html
+++ b/views/default/frontend/index.html
@@ -25,7 +25,7 @@
 			{if:$key!=='cname'}
 			<div class="column" {if:$key%4==0} style="margin-left:0;"{/if}>
 				<p class="from" style="display:none;">{$goods['bname']}</p>
-				<a href="/buy.html?gid={$goods['id']}" title="{$goods['name']}" target="_blank">
+				<a href="/buy/{$goods['id']}.html" title="{$goods['name']}" target="_blank">
 					<div class="image">
 							<img src="{webroot:}img/no_pic.gif" data-original="{$goods['list_img']}" alt="{$goods['name']}" />
 					</div>
