--- a/views/default/frontend/index.html
+++ b/views/default/frontend/index.html
@@ -16,6 +16,7 @@
 		{set:$index=$index+1}
 		<div class="floor_hd color{$index}">
 			<h3><span class="name">{$category_goods['cname']}</span></h3>
+			<i class="line color{$index}"></i>
 			<ul class="hotwords">
 				<li><a href="/glist/1_{$key}_0_0_0_0.html">可以有更多>></a></li>
 			</ul>
