--- a/views/default/layouts/frontend.html
+++ b/views/default/layouts/frontend.html
@@ -33,6 +33,7 @@
 				</span>
 			</div>
 			<a class="z_btn_bf" id="searchBtn" href="javascript:;" title="搜索" onclick="return false;">搜索</a>
+			<p style="display:none;" class="hotwords">热搜:<a href="#" title="夏装">夏装</a></p>
 		</div>
 	</div>
 </div>
