--- a/css/style.css
+++ b/css/style.css
@@ -46,29 +46,29 @@ a:hover {color: #3EAF0E;text-decoration: underline;}
 
 /*** 搜索search ***/
 .z_btn_bf, .z_txtwrap, .z_s_l, .z_s_r{background: url(../img/spr_icon.png) no-repeat;}
-.z_b_wrap{ width:450px; height:41px; margin:18px auto 0;overflow:hidden;float: right;}
-.z_txtwrap{ float:left; width:335px; height:41px; background-position:0 -126px; background-repeat:repeat-x; position:relative; overflow:hidden;}
-.z_input_lab{ position:absolute;left:18px; top:11px;_top:12px; font-size:14px; color:#bfbfbf;z-index:1;}
-.z_s_l,.z_s_r{ width:15px; height:41px;}
-.z_s_l{ float:left; background-position:0 -84px;}
-.z_s_r{ float:right; background-position:-16px -84px;}
-.z_txtwrap .text{position:absolute;left:0; top:0;}
-.z_txtwrap input{ width:300px; height:20px;line-height:20px;vertical-align:middle; padding:11px 15px 9px; position:relative;  font:14px/20px \5B8B\4F53; color:#000;background-image:url(../img/label_bg.png);background-color:transparent;z-index:2;}
-.z_txtwrap input.igray:focus{ color:#444;}
-.z_txtwrap input.igray{color:#ccc;}
+.z_b_wrap{ width:450px; height:70px; margin:18px auto 0;overflow:hidden;float: right;position: relative;}
+.z_b_wrap .z_txtwrap{ float:left; width:335px; height:41px; background-position:0 -126px; background-repeat:repeat-x; position:relative; overflow:hidden;}
+.z_b_wrap .z_input_lab{ position:absolute;left:18px; top:11px;_top:12px; font-size:14px; color:#bfbfbf;z-index:1;}
+.z_b_wrap .z_s_l,.z_s_r{ width:15px; height:41px;}
+.z_b_wrap .z_s_l{ float:left; background-position:0 -84px;}
+.z_b_wrap .z_s_r{ float:right; background-position:-16px -84px;}
+.z_b_wrap .z_txtwrap .text{position:absolute;left:0; top:0;}
+.z_b_wrap .z_txtwrap input{ width:300px; height:20px;line-height:20px;vertical-align:middle; padding:11px 15px 9px; position:relative;  font:14px/20px \5B8B\4F53; color:#000;background-image:url(../img/label_bg.png);background-color:transparent;z-index:2;}
+.z_b_wrap .z_txtwrap input.igray:focus{ color:#444;}
+.z_b_wrap .z_txtwrap input.igray{color:#ccc;}
 ::-webkit-input-placeholder { color:#ccc; }
 input:-moz-placeholder { color:#ccc; }
 input:-ms-input-placeholder{color:#ccc;}
-.z_b_wrap a{color:#FFF;}
-.z_btn_bf{ width:104px; height:41px; display:block; text-align:center; color:#FFF; font:18px/40px \5FAE\8F6F\96C5\9ED1; background-position:0 0; float:right; overflow:hidden;}
-.z_btn_bf:hover{ background-position:0 -42px; text-decoration:none;color:#FFF;}
-.z_bf_p{ width:696px; height:24px; font:14px/24px \5B8B\4F53; margin:0 auto; padding:8px 0 0; color:#007cc2;}
-.z_bf_p img{ vertical-align:middle; margin:-3px 8px 0 0;}
-.z_bf_p a{ color:#007cc2;}
-.z_bf_p_sim{ height:0; overflow:hidden;}
-.z_txt_tips{ height:22px; line-height:22px; background-color:#ffe9ad; color:#e9873f; width:604px; margin-left:126px; text-indent:14px; border:1px solid #e9873f;}
-
-
+.z_b_wrap .z_b_wrap a{color:#FFF;}
+.z_b_wrap .z_btn_bf{ width:104px; height:41px; display:block; text-align:center; color:#FFF; font:18px/40px \5FAE\8F6F\96C5\9ED1; background-position:0 0; float:right; overflow:hidden;}
+.z_b_wrap .z_btn_bf:hover{ background-position:0 -42px; text-decoration:none;color:#FFF;}
+.z_b_wrap .z_bf_p{ width:696px; height:24px; font:14px/24px \5B8B\4F53; margin:0 auto; padding:8px 0 0; color:#007cc2;}
+.z_b_wrap .z_bf_p img{ vertical-align:middle; margin:-3px 8px 0 0;}
+.z_b_wrap .z_bf_p a{ color:#007cc2;}
+.z_b_wrap .z_bf_p_sim{ height:0; overflow:hidden;}
+.z_b_wrap .z_txt_tips{ height:22px; line-height:22px; background-color:#ffe9ad; color:#e9873f; width:604px; margin-left:126px; text-indent:14px; border:1px solid #e9873f;}
+.z_b_wrap .hotwords {position: absolute;left: 14px;bottom: 4px;}
+.z_b_wrap .hotwords a{margin-left: 8px;}
 /**** 导航菜单nav ***/
 .nav{ height: 40px; background:#e4e4e4; border-bottom: 1px solid #d9d9d9;border-top: 2px solid #3EAF0E;}
 .nav .menu { margin: 0; font-size: 14px;}
