--- a/views/default/layouts/frontend.html
+++ b/views/default/layouts/frontend.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="description" content="{if:$description}{$description}{else:}优加网提供最可靠、最好口碑的数百个品牌的母婴用品, 致力于帮助广大妈咪们安全便捷地选购奶粉、纸尿裤、童鞋童装、辅食、营养品、服饰、孕妇用品等母婴用品。{/if}" />
 	<meta name="keywords" content="{if:$keywords}{$keywords}{else:}优加网, 母婴, 品牌, 安全购物, 健康, 小屁孩,导购{/if}" />
-	<title>{if:$title}{$title}{else:}优加(ujia.info) - 一个提供优质、健康、安全母婴品牌用品的导购平台{/if}</title>	
+	<title>{if:$title}{$title}{else:}优加网(ujia.info) - 一个提供优质、健康、安全母婴品牌用品的导购平台{/if}</title>	
 	<link href="{webroot:}css/style.css" rel="stylesheet" type="text/css" />	
 	<link href="{webroot:}css/nivo-slider.css" rel="stylesheet" type="text/css" />
 	<!--[if IE]><link href="{webroot:}css/style-ie.css" rel="stylesheet" type="text/css" /><![endif]-->
