--- a/views/default/layouts/frontend.html
+++ b/views/default/layouts/frontend.html
@@ -57,7 +57,7 @@
 <div class="footer">
 	<div class="container">
 		<div class="footer">
-			<p>优加(ujia.info) Copyright © 2012-2013</p>
+			<p>优加网(ujia.info) Copyright © 2012-2013</p>
 		</div>
 	</div>
 </div><!-- // end #fppter -->
