--- a/views/default/tools/article_list.html
+++ b/views/default/tools/article_list.html
@@ -46,7 +46,7 @@
 					<td>{$item['sort']}</td>
 					<td>
 						<a href='{url:/tools/article_edit/id/$item[id]}'><img class="operator" src="{skin:images/admin/icon_edit.gif}" alt="编辑" title="编辑" /></a>
-						<a target="_blank" href='{url:/site/article_detail/id/$item[id]}'><img class="operator" src="{skin:images/admin/icon_check.gif}" alt="查看" title="查看" /></a>
+						<a target="_blank" href='{url:/frontend/article/id/$item[id]}'><img class="operator" src="{skin:images/admin/icon_check.gif}" alt="查看" title="查看" /></a>
 						<a href='javascript:void(0)' onclick="delModel({link:'{url:/tools/article_del/id/$item[id]}'});"><img class="operator" src="{skin:images/admin/icon_del.gif}" alt="删除" title="删除" /></a>
 					</td>
 				</tr>
