--- a/views/default/frontend/index.html
+++ b/views/default/frontend/index.html
@@ -15,7 +15,7 @@
 		{foreach:items=$goods_list item=$category_goods}
 		{set:$index=$index+1}
 		<div class="floor_hd color{$index}">
-			<h3><span class="name">{$category_goods['cname']}</span></h3>
+			<h3><a href="/glist/1_{$key}_0_0_0_0.html" class="name color{$index}">{$category_goods['cname']}</a></h3>
 			<i class="line color{$index}"></i>
 			<ul class="hotwords">
 				<li><a href="/glist/1_{$key}_0_0_0_0.html">可以有更多>></a></li>
